# eww-bot

./: .gitignore  MIT-LICENSE.txt  README.md  achievement_updater.py  api_achievements_map.json  check_api_keys.py  json_migrator.py  key_management.py  main.py  pyproject.toml  vette_fix.py
config/: config.json.example  imports.py
src/: authorization.py  bot_client.py  catfact.py  db_migrate.py  db_viewer.py  gw2_api_client.py  helpers.py  open_ai.py  settings.py
src/cmds/: debug_cog.py  wiki_cog.py
src/cogs/: add_key_cog.py  apply_cog.py  arcdps_check_cog.py  attendance_cog.py  check_attendance_cog.py  check_member_cog.py  config_cog.py  funderboard.py  game_updates_cog.py  import_builds_cog.py  keys_cog.py  leaderboard_cog.py  manual_raid_reminder_cog.py  propose_cog.py  raid_notification_cog.py  remove_key_cog.py  set_build_cog.py  set_key_cog.py  show_attendance_cog.py  stats_cog.py  sync_leaderboard_cog.py  time_in_role_cog.py  toggle_soundboard_cog.py
src/models/: api_key.py  arcdps.py  attendance.py  base_model.py  config.py  feed.py  member.py
src/tasks/: arcdps_check_task.py  auto_attendance_cog.py  auto_attendance_task.py  game_updates_task.py  raid_reminder_task.py  stat_updater_task.py
src/views/: apply_mod_view.py  apply_view.py  class_select_view.py  edit_config_view.py  key_management_view.py  proposal_view.py  reason_view.py  set_build_view.py  set_config_view.py  set_multi_config_view.py
src/web/: web.py
